# C_Serialize-Framework

./: CMakeLists.txt  README.md
src/: CMakeLists.txt  sf-def.h  sf-pack.c  sf-pack.h
test/: CMakeLists.txt  test-1.c  test-2.c  test-sf.c
